fix: make footer background visible on mobile

--- a/style.css
+++ b/style.css
@@ -72,3 +72,24 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.footer-container {
+    background-image: url(assets/footer-bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 15px 0px;
+    min-height:350px;
+    position: relative;
+}
+
+ 
+@media screen and (max-width:576px) {
+    .footer-container {
+       background-size: contain;
+      padding-top: 50px;
+
+        
+    }
+}
+ 
